--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,4 +1,13 @@
 .header{
     display: flex;
     justify-content: space-around;
+    padding-bottom: 0;
+}
+
+.logoLLDL{
+    margin-left: 5%;
+}
+
+.panierGroup{
+    margin-left: 89%;
 }
