--- a/src/Styles/NavBar.scss
+++ b/src/Styles/NavBar.scss
@@ -3,10 +3,16 @@
     border-radius: 25px;
     color: white;
     font-family: 'Roboto', sans-serif;
+    font-weight: bolder ;
     width: 159px;
     height: 45px;
     margin-right: 53px;
     margin-top: 18%;
+}
+
+.buttonNavBar:hover{
+    background-color: #a9a7ae;
+    color: #0E2B46;
 }
 
 
