--- a/src/Styles/SearchBar.scss
+++ b/src/Styles/SearchBar.scss
@@ -1,40 +1,46 @@
+/* SearchBar.scss */
 
 form {
     display: flex;
-    align-items: center; /* Centre verticalement les éléments du formulaire */
+    align-items: center;
+    margin: 0; 
 }
 
 .searchBar {
-    flex: 1; /* Prend tout l'espace disponible */
-    padding: 5px;
-    border: 5px solid #ccc; /* Bordure autour de l'input */
-    border-radius: 25px 0 0 25px; /* Coins arrondis : haut-gauche et bas-gauche */
-    font-size: 16px;
+    flex: 1; 
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 25px 0 0 25px; 
+    font-size: 16px; 
+    outline: none; 
+    padding-bottom: 0;
+    border: solid #D9D9D9 6px;
 }
 
 .buttonSearch {
-    padding: 5px 20px;
+    padding: 10px 15px;
     border: none;
-    width: 15px;
-    background-color: #D9D9D9; /* Couleur de fond du bouton */
-    border-radius: 0 25px 25px 0; /* Coins arrondis : haut-droit et bas-droit */
-    cursor: pointer; /* Curseur de pointeur pour le bouton */
+    background-color: #D9D9D9;
+    border-radius: 0 25px 25px 0;
+    cursor: pointer; 
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
 
 .buttonSearch img {
-    width: 25px; /* Ajuste la taille de l'image dans le bouton */
-    height: 25px; /* Ajuste la taille de l'image dans le bouton */
-    border: solid red;
+    width: 20px; 
+    height: 20px;
 }
 
 .searchBar:focus {
-    border-color: #6F5F96; /* Couleur de la bordure de l'input au focus */
+    border-color: #D9D9D9;
 }
 
 .buttonSearch:hover {
-    background-color: #828185; /* Couleur du bouton au survol */
+    background-color: #5a4c7a; 
 }
 
-.searchBarComplet{
-    margin-top: 7%;
+.searchBarInput{
+    padding-top: 2%;
 }
