--- a/src/App.css
+++ b/src/App.css
@@ -5,18 +5,30 @@ html, body {
 }
 
 .content {
+  position: relative; /* Nécessaire pour le positionnement du pseudo-élément */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-image: url("./Assets/AMS.png");
+  background-size: cover;
+  background-position: center 20%;
+  background-repeat: no-repeat;
+  border: solid white 1px;
+  background-color: rgb(127, 127, 127);
 }
 
-.footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 10px 0;
-  position: relative;
+.content::before {
+  content: '';
+  position: absolute; 
+  top: 0;
+  left: 0;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  margin-top: auto;
+  background-color: rgba(167, 166, 166, 0.6); 
+  z-index: 1; 
+}
+
+.content > * {
+  position: relative; 
+  z-index: 2;
 }
