--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,7 @@ html, body {
   position: relative; 
   z-index: 2;
 }
+
+/* slick-carousel CSS */
+@import '~slick-carousel/slick/slick.css';
+@import '~slick-carousel/slick/slick-theme.css';
