--- a/src/Styles/Footer.scss
+++ b/src/Styles/Footer.scss
@@ -38,3 +38,12 @@
     line-height: 0.5;
     margin: 0;
 }
+
+.footerText a{
+  text-decoration: none;
+  color: black;
+}
+
+.footerText a:hover{
+  color: white;
+}
