--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -9,3 +9,20 @@
     padding-top: 2%;
     padding-bottom: 2.5%;
 }
+
+@media(max-width: 768px) {
+    
+    .textPresentation{
+        text-align: center;
+        font-family: 'Roboto', sans-serif;
+        font-weight: bolder;
+        font-size: 2.1rem;
+        color: #424542;
+        margin-top: 4%;
+        background-color: rgba(217, 217, 217, 0.4);
+        padding-top: 2%;
+        padding-bottom: 2.5%;
+    }
+    
+
+}
