--- a/src/Styles/NavBar.scss
+++ b/src/Styles/NavBar.scss
@@ -20,12 +20,72 @@
     color: #0E2B46;
 }
 
-
-/* Retire la marge du dernier élément pour éviter l'espace supplémentaire à la fin */
 .buttonNavBar:last-child {
     margin-right: 0;
 }
 
 .navBar{
     margin-left: 13%;
+}
+
+
+
+
+
+
+
+
+.burger {
+    cursor: pointer;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.bar {
+    width: 100%;
+    height: 3px;
+    background-color: #333;
+    border-radius: 2px;
+    transition: all 0.3s ease;
+}
+
+/* Animation de l'icône burger quand le menu est ouvert */
+.burger.open .bar:nth-child(1) {
+    transform: translateY(9px) rotate(45deg);
+}
+
+.burger.open .bar:nth-child(2) {
+    opacity: 0;
+}
+
+.burger.open .bar:nth-child(3) {
+    transform: translateY(-9px) rotate(-45deg);
+}
+
+/* Masquer le menu sur les petits écrans */
+@media (max-width: 768px) {
+    .navLinks {
+        display: none; /* Menu caché par défaut */
+        flex-direction: column;
+        position: absolute;
+        margin-top: 10px;
+        right: 0;
+        background-color: #fff;
+        width: 100%;
+        height: auto;
+        // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Afficher le menu quand l'état isOpen est vrai */
+    .navLinks.open {
+        display: flex;
+    }
+
+    /* Rendre le burger visible sur les petits écrans */
+    .burger {
+        display: flex;
+    }
 }
