--- a/src/Styles/SearchBar.scss
+++ b/src/Styles/SearchBar.scss
@@ -44,3 +44,48 @@ form {
 .searchBarInput{
     padding-top: 2%;
 }
+
+@media (max-width: 768px) {
+    .searchBar {
+        flex: 1; 
+        padding: 5px;
+        border: 0.4px solid #ccc;
+        border-radius: 20px 0 0 25px; 
+        font-size: 15px; 
+        outline: none; 
+        padding-bottom: 0;
+        border: solid #D9D9D9 6px;
+    }
+    
+    .buttonSearch {
+        padding: 10px 15px;
+        border: none;
+        background-color: #D9D9D9;
+        border-radius: 0 25px 25px 0;
+        cursor: pointer; 
+        display: flex; 
+        justify-content: center; 
+        align-items: center;
+    }
+    
+    .buttonSearch img {
+        width: 15px; 
+        height: 15px;
+    }
+    
+    .searchBar:focus {
+        border-color: #D9D9D9;
+    }
+    
+    .buttonSearch:hover {
+        background-color: #5a4c7a; 
+    }
+    
+    .searchBarInput{
+        padding-top: 2%;
+        width: 60%;
+        margin-left: 35%;
+        margin-top: -10%;
+    }
+    
+}
