--- a/src/Styles/NavBar.scss
+++ b/src/Styles/NavBar.scss
@@ -12,7 +12,7 @@
 
 .buttonNavBar a {
     color: white;
-    text-decoration: none; /* Retirer le soulignement */
+    text-decoration: none;
 }
 
 .buttonNavBar:hover{
@@ -26,13 +26,9 @@
 
 .navBar{
     margin-left: 13%;
+    position: relative;
+    z-index: 1000;
 }
-
-
-
-
-
-
 
 
 .burger {
@@ -42,7 +38,11 @@
     justify-content: space-between;
     width: 30px;
     height: 21px;
+    position: relative;
+    z-index: 1001; /* Assurez-vous que le burger est au-dessus du menu */
 }
+
+
 
 .bar {
     width: 100%;
@@ -65,10 +65,32 @@
     transform: translateY(-9px) rotate(-45deg);
 }
 
+.navLinksMobile {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: #6F5F96;
+    padding-top: 60px;
+    z-index: 999;
+    overflow-y: auto;
+  
+    &.open {
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(248, 248, 248);
+    }
+  }
+
+
+
+  
 /* Masquer le menu sur les petits écrans */
 @media (max-width: 768px) {
     .navLinks {
-        display: none; /* Menu caché par défaut */
+        display: none;
         flex-direction: column;
         position: absolute;
         margin-top: 10px;
@@ -76,7 +98,7 @@
         background-color: #fff;
         width: 100%;
         height: auto;
-        // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
 
     /* Afficher le menu quand l'état isOpen est vrai */
@@ -88,4 +110,33 @@
     .burger {
         display: flex;
     }
+
+    .navLinksMobile.open {
+        display: flex;
+        flex-direction: column;
+        background-color: #575757;
+        position: absolute;
+        top: 100%;
+        width: 90%;
+        height: 160px;
+        padding: 5px 0;
+        align-items: center;
+      }
+      
+      .navItem {
+        color: white;
+        text-decoration: none;
+        font-family: 'Roboto', sans-serif;
+        font-weight: bold;
+        padding: 15px;
+        font-size: 16px;
+      }
+      
+      .navItem:hover {
+        color: #ACD0FF;
+      }
 }
+
+
+
+
