responsive and button panier

--- a/src/Styles/DetailLivre.scss
+++ b/src/Styles/DetailLivre.scss
@@ -19,6 +19,7 @@
 
 .descriptCardLivre{
     font-family: 'Roboto', sans-serif;
+    font-style: normal;
     color: #0E2B46 ;
     margin-right: 30%;
     font-size: 1.2rem;
