--- a/src/Styles/NavBar.scss
+++ b/src/Styles/NavBar.scss
@@ -30,6 +30,10 @@
     z-index: 1000;
 }
 
+.navLinks{
+    padding-top: 0;
+    margin-bottom: 15%;
+}
 
 .burger {
     cursor: pointer;
@@ -118,7 +122,7 @@
         position: absolute;
         top: 100%;
         width: 90%;
-        height: 160px;
+        height: 190px;
         padding: 5px 0;
         align-items: center;
       }
