--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,11 +1,13 @@
 .header{
     display: flex;
     justify-content: space-around;
-    padding-bottom: 0;
+    height: 12rem;    
 }
 
 .logoLLDL{
-    margin-left: 5%;
+    width: 11rem;
+    margin-top: 28%;
+    margin-left: 20%;
 }
 
 .panierGroup{
@@ -18,11 +20,13 @@
         flex-direction: column;
         align-items: center;
         padding: 10px 0;
+        height: 14rem;
     }
 
     .logoLLDL {
-        width: 80%;
-        margin-top: 0;
+        width: 55%;
+        align-items: center;
+        margin-top: 10%;
     }
 
     /* Réorganiser la barre de navigation et la barre de recherche */
