--- a/src/Styles/SearchBar.scss
+++ b/src/Styles/SearchBar.scss
@@ -6,6 +6,10 @@ form {
     margin: 0; 
 }
 
+.searchBarPanier{
+    margin-top: 5%;
+}
+
 .searchBar {
     flex: 1; 
     padding: 10px;
@@ -17,6 +21,12 @@ form {
     border: solid #D9D9D9 6px;
 }
 
+.searchBar::placeholder {
+    font-size: 14px;
+    color: #999;
+    opacity: 1; 
+}
+
 .buttonSearch {
     padding: 10px 15px;
     border: none;
@@ -26,6 +36,8 @@ form {
     display: flex; 
     justify-content: center; 
     align-items: center;
+    margin-left: -10%;
+    
 }
 
 .buttonSearch img {
@@ -42,50 +54,21 @@ form {
 }
 
 .searchBarInput{
-    padding-top: 2%;
+    // border: solid red;
+    margin-top: 2%;
 }
 
 @media (max-width: 768px) {
-    .searchBar {
-        flex: 1; 
-        padding: 5px;
-        border: 0.4px solid #ccc;
-        border-radius: 20px 0 0 25px; 
-        font-size: 15px; 
-        outline: none; 
-        padding-bottom: 0;
-        border: solid #D9D9D9 6px;
+
+    .searchBar::placeholder {
+        font-size: 12px;
+    }
+
+    .searchBarPanier{
+        margin-top: -15%;
+        width: 15rem;
+        margin-left: 30%;
     }
     
-    .buttonSearch {
-        padding: 10px 15px;
-        border: none;
-        background-color: #D9D9D9;
-        border-radius: 0 25px 25px 0;
-        cursor: pointer; 
-        display: flex; 
-        justify-content: center; 
-        align-items: center;
-    }
-    
-    .buttonSearch img {
-        width: 15px; 
-        height: 15px;
-    }
-    
-    .searchBar:focus {
-        border-color: #D9D9D9;
-    }
-    
-    .buttonSearch:hover {
-        background-color: #5a4c7a; 
-    }
-    
-    .searchBarInput{
-        padding-top: 2%;
-        width: 60%;
-        margin-left: 35%;
-        margin-top: -10%;
-    }
     
 }
