--- a/src/Styles/Home.scss
+++ b/src/Styles/Home.scss
@@ -17,12 +17,14 @@
         text-align: center;
         font-family: 'Roboto', sans-serif;
         font-weight: bolder;
-        font-size: 2.1rem;
+        font-size: 2rem;
         color: #424542;
         margin-top: 4%;
         background-color: rgba(217, 217, 217, 0.4);
         padding-top: 2%;
         padding-bottom: 2.5%;
+        padding-left: 3%;
+        padding-right: 3%;
     }
     
 }
