--- a/src/Styles/Formulaire.scss
+++ b/src/Styles/Formulaire.scss
@@ -7,26 +7,35 @@
     margin: 0 auto;
     margin-top: 4%;
     font-family: 'Roboto', sans-serif;
-
 }
+
 $form-background-color: #f4f4f4;
 $input-border-color: #ccc;
-$button-color: #007bff;
+$button-color: #174180;
 $error-color: #ff4d4d;
+
+.form-fieldNom ::placeholder,.form-fieldPrenom ::placeholder,
+.form-fieldMail ::placeholder,.form-fieldTel ::placeholder,
+.form-fieldMessage ::placeholder {
+  color: #8e8d8d;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+}
 
 
 .form-container {
-  max-width: 600px;
   margin: 50px auto;
+  width: 50%;
+  background-color: #C0C0C0;
   padding: 20px;
-  background-color: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
 }
 
 .form-title {
   text-align: center;
-  color: #333;
+  font-family: 'Roboto', sans-serif;
+  color: #0E2B46 ;
   font-size: 24px;
   margin-bottom: 30px;
 }
@@ -37,8 +46,40 @@ $error-color: #ff4d4d;
   gap: 20px;
 }
 
-.form-field {
+.nomPrenom, .mailTelephone{
   display: flex;
+  flex-direction: row;
+  width: 80%;
+  justify-content:space-between ;
+}
+
+.form-fieldNom {
+  display: flex;
+  width: 40%;
+  flex-direction: column;
+}
+
+.form-fieldPrenom {
+  display: flex;
+  width: 50%;
+  flex-direction: column;
+}
+
+.form-fieldTel {
+  display: flex;
+  width: 35%;
+  flex-direction: column;
+}
+
+.form-fieldMail {
+  display: flex;
+  width: 55%;
+  flex-direction: column;
+}
+
+.form-fieldMessage {
+  display: flex;
+  width: 80%;
   flex-direction: column;
 }
 
@@ -53,7 +94,7 @@ input[type="email"],
 textarea {
   padding: 10px;
   border: 1px solid $input-border-color;
-  border-radius: 5px;
+  border-radius: 15px;
   font-size: 16px;
   width: 100%;
   transition: border-color 0.3s ease;
@@ -71,12 +112,15 @@ textarea {
 
 .form-button {
   background-color: $button-color;
+  font-family: 'Roboto', sans-serif;
   color: white;
+  border: solid white 2px;
+  width: 8rem;
   padding: 10px;
   border: none;
-  border-radius: 5px;
+  border-radius: 25px;
   cursor: pointer;
-  font-size: 18px;
+  font-size: 20px;
   transition: background-color 0.3s ease;
 
   &:hover {
@@ -92,15 +136,33 @@ textarea {
 
 @media (max-width: 768px) {
   .form-container {
-    padding: 15px;
-    margin: 20px;
+    width: 80%;
+    background-color: #C0C0C0;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
   }
-
+  
   .form-title {
     font-size: 20px;
   }
 
   .form-button {
-    font-size: 16px;
+    font-size: 18px;
   }
+
+.form-fieldMessage {
+  display: flex;
+  width: 92%;
+  flex-direction: column;
+  margin-right: 5%;
+}
+.nomPrenom, .mailTelephone{
+  display: flex;
+  flex-direction: row;
+  width: 92%;
+  justify-content:space-between ;
+  margin-right: 5%;
+}
+
+
 }
