--- a/src/Styles/Footer.scss
+++ b/src/Styles/Footer.scss
@@ -65,4 +65,13 @@
       justify-content: center;
       margin: 0;
   }
+  .icon {
+    width: 2rem;
+    height: 2rem; 
+}
+.icon3 {
+    width: 2.5rem;
+    height: 2rem; 
+}
+
 }
