--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,24 @@ html, body {
 /* slick-carousel CSS */
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
+
+/* @media (max-width: 768px) {
+
+  html, body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-image: url("./Assets/AMS.png");
+    background-size: cover;
+    background-position: center 20%;
+    background-repeat: no-repeat;
+    border: solid white 1px;
+    background-color: rgb(127, 127, 127);
+  }
+  
+} */
