--- a/src/Styles/Formulaire.scss
+++ b/src/Styles/Formulaire.scss
@@ -26,7 +26,7 @@ $error-color: #ff4d4d;
 .form-container {
   margin: 50px auto;
   width: 50%;
-  background-color: #C0C0C0;
+  background-color: #E6E1E1;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
