--- a/src/Styles/TableauPanier.scss
+++ b/src/Styles/TableauPanier.scss
@@ -2,10 +2,10 @@
 .titrePagePanier{
     color: white;
     background-color: #0E2B46;
+    font-family: 'Roboto', sans-serif;
     width: 90%;
     margin-left: 10%;
     margin: 0 auto;
-    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     display: flex;
     height: 2rem;
@@ -18,6 +18,19 @@
 
 .colonneDesign{
     width: 15rem;
+    margin-left: 7rem;
+}
+
+.colonneQuantite{
+    margin-left: 8.5rem;
+}
+
+.colonneFraisPort{
+    margin-left: 13rem;
+}
+
+.colonneTotal{
+    margin-left: 15rem;
 }
 
 .tablePanier {
@@ -55,6 +68,7 @@
     display: flex;
     flex-direction: column;
     margin-left: 20px;
+    // margin-right: 60%;
     flex: 1; /* Ce bloc prend l'espace disponible */
 }
   
@@ -66,24 +80,41 @@
   
 .auteurCartePanier,
 .isbnCartePanier,
-.prixCartePanier {
+.portCartePanier {
     font-size: 14px;
     color: #666;
-    // margin-top: 5px;
+    margin-top: 1px;
+    margin-bottom: 0;
   }
-  
+.prixCartePanier {
+    font-size: 20px;
+    color: #666;
+}
+
+
+.quantitePortPrix{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 70%;
+    color: #0E2B46;
+    font-family: 'Roboto', sans-serif;
+}
+
 .quantiteContainer {
-    margin: 0 20px; /* Espace à gauche et à droite du bloc de quantité */
     font-size: 14px;
 }
   
 .fraisEtTotalContainer {
     text-align: right;
+
 }
+
   
 .fraisPortCartePanier,
 .totalCartePanier {
-    font-size: 14px;
+    font-size: 25px;
+    font-weight: bolder;
     margin: 5px 0;
 }
     
