--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html, body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-image: url("./Assets/AMS.png");
+  background-image: url("./Assets/FondFootBeffroie2.png");
   background-size: cover;
   background-position: center 20%;
   background-repeat: no-repeat;
