--- a/src/Styles/SearchBar.scss
+++ b/src/Styles/SearchBar.scss
@@ -37,7 +37,8 @@ form {
     justify-content: center; 
     align-items: center;
     margin-left: -10%;
-    
+    border: 1.15px solid #ccc;
+
 }
 
 .buttonSearch img {
