--- a/src/Styles/TableauPanier.scss
+++ b/src/Styles/TableauPanier.scss
@@ -3,8 +3,7 @@
     color: white;
     background-color: #0E2B46;
     font-family: 'Roboto', sans-serif;
-    width: 90%;
-    margin-left: 10%;
+    width: 75%;
     margin: 0 auto;
     font-size: 20px;
     display: flex;
@@ -55,8 +54,8 @@
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    width: 88%;
-    margin-left: 5%;
+    width: 70%;
+    margin-left: 15%;
 }
   
 .imageCartePanier {
@@ -78,8 +77,7 @@
 }
   
 .auteurCartePanier,
-.isbnCartePanier,
-.portCartePanier {
+.isbnCartePanier {
     font-size: 14px;
     color: #666;
     margin-top: 1px;
@@ -113,11 +111,6 @@
 }
     
 
-.fraisPortCartePanier {
-    font-size: 18px;
-    font-weight: bold;
-    width: 85rem;
-}
 
 
 hr {
