--- a/src/Styles/TableauPanier.scss
+++ b/src/Styles/TableauPanier.scss
@@ -24,9 +24,6 @@
     margin-left: 8.5rem;
 }
 
-.colonneFraisPort{
-    margin-left: 13rem;
-}
 
 .colonneTotal{
     margin-left: 15rem;
@@ -57,7 +54,11 @@
     width: 70%;
     margin-left: 14%;
 }
-  
+
+.blocImageDescriptif{
+    display: flex;
+}
+
 .imageCartePanier {
     width: 5.4rem;
     height: auto;
@@ -91,11 +92,12 @@
 
 .quantitePortPrix{
     display: flex;
-    // justify-content: space-around;
     align-items: center;
-    width: 70%;
+    width: 60%;
     color: #0E2B46;
     font-family: 'Roboto', sans-serif;
+    margin-left: 5rem;
+    
 }
 
   
@@ -107,13 +109,10 @@
 .totalCartePanier {
     font-size: 25px;
     font-weight: bolder;
-    width: 55rem;
+    width: 20rem;
+    padding-left: 4.5rem;
 }
     
-
-
-
-
 .suppression{
     width: 1.3rem;
 }
@@ -149,3 +148,54 @@
     font-size: 16px; 
     font-weight: bold;
 }
+
+@media (max-width: 768px) {
+    .titrePagePanier {
+        font-size: 0px;
+        width: 90%;
+    }
+
+    .cartePanierHorizontale {
+        flex-direction: column;
+        // align-items: center;
+        width: 80%;
+        margin-left: 5.8%;
+    }
+
+    .imageCartePanier{
+        width: 5rem;
+        margin-bottom: 8rem;
+    }
+
+    .quantitePortPrix{
+        margin-top: 0;
+        width: 5rem;
+        height: 3rem;
+        margin-right: 90%;
+        margin-top: -6rem;
+    }
+
+    .totalCartePanier{
+        margin-left: -5rem;
+    }
+
+    .infoCartePanier {
+        width: 12rem;
+        height: 10rem;
+    }
+
+    .quantiteContainer {
+        margin-left: 0;
+        width: 80px;
+    }
+
+    .totalCartePanier {
+        font-size: 20px;
+        padding-left: 0;
+    }
+}  
+
+ 
+    
+    
+
