--- a/src/Styles/VotrePanier.scss
+++ b/src/Styles/VotrePanier.scss
@@ -142,6 +142,24 @@ hr {
     height: 1.2rem;
 }
 
+.buttonNextStep{
+    background-color: #174180;
+    color: white;
+    border-radius: 25px;
+    padding: 0.5%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    width: 10rem;
+    font-size: 1.2rem;
+    margin-bottom: 4.5%;
+    margin-left: 76%;
+}
+
+.buttonNextStep:hover{
+    cursor: pointer;
+    background-color: #0E2B46;
+}
+
 @media (max-width: 768px) {
     .etape {
         font-size: 0.45rem;
@@ -167,7 +185,6 @@ hr {
 
     }
     
-    
     .titreBoutonAchat{
         margin-left: 15%;
         margin-top: -1rem;
@@ -175,5 +192,32 @@ hr {
         // border: solid rgb(81, 0, 255);
 
     }
+
+    hr{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .tableauPanier{
+        width: 90%;
+        margin-left: 5%;
+        margin-bottom: 10%;
+        margin-top: 1rem;
+    }
+    
+    .tableauPanier tr{
+        font-size: 15px;
+    }
+   
+    .cadenas{
+        width: 1rem;
+        height: 1rem;
+    }
+
+    .buttonNextStep{
+        margin-left: 53%;
+    }
+    
+    
     
 }
