--- a/src/Styles/FormulaireAdresse.scss
+++ b/src/Styles/FormulaireAdresse.scss
@@ -92,8 +92,9 @@ input[type="email"] {
 /* Responsive design */
 @media (max-width: 768px) {
   .form-container {
-    width: 90%;
+    width: 85%;
     padding: 20px;
+    margin-top: 2%;
   }
 
   .nomPrenomAdresse,
@@ -114,7 +115,7 @@ input[type="email"] {
   .form-fieldCodePostal,
   .form-fieldVille,
   .form-fieldPays {
-    width: 100%;
+    width: 90%;
   }
 
   .form-buttonAdresse {
