--- a/src/Styles/Panier.scss
+++ b/src/Styles/Panier.scss
@@ -42,7 +42,7 @@
     .panier {
         display: flex;
         align-items: center; 
-        margin-left: 62%;
+        margin-left: 0;
     }
 
     .logoPanier {
