--- a/src/Styles/SearchBar.scss
+++ b/src/Styles/SearchBar.scss
@@ -67,7 +67,7 @@ form {
     .searchBarPanier{
         margin-top: -15%;
         width: 18rem;
-        margin-left: 15%;
+        margin-right: 4rem;
     }
     
     
